Fixing some formatting stuffs

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -262,6 +262,10 @@
             <br>
             <a href="./gallery/nizi/Youko.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
             <br>
+            <br>
+            <br>
+            <br>
+            <br>
           </div>
         </section>
       </article>
@@ -375,7 +379,7 @@
           <a href="./gallery/nizi/Bolormaa.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- 錯誤（Cuòwù） -->
+        <!-- 錯誤（Cuòwù｜錯誤｜错误） -->
         <section>
           <h4 id="Cuòwù">錯誤</h4>
           <div class="pride">
@@ -448,9 +452,24 @@
           <p>錯誤の脳は本質的にミニコンピューターである為、これはいくつかのかなり興味深い癖をもたらす。たとえば、錯誤は、ステレオタイプ化やその他の素早い思考を物理的に行う事ができない。彼女の思考は全てゆっくりと論理的であり、コンピューター科学とサイバネティック科学がどのように機能するかについて深い理解につながる。この癖はまた、錯誤を<ruby>現在興味<rt>ハイパーフィクセイション</rt></ruby>に助けます（つまり、実際に彼女の直感の物理的な欠如のために量子力学と天体物理学を非常によく理解しており、彼女が様々な科学を効率的に理解できるようにする）。しかし、錯誤は<ruby>多元的な存在<rt>プルラリティ</rt></ruby>も経験しており、現在４人の<ruby>分身<rt>アルター</rt></ruby>がいる。この<ruby>分身<rt>アルター</rt></ruby>は：<ruby>主人<rt>ホスト</rt></ruby>の錯誤（好んだ代名詞は彼女／いずれかの代名詞である）と<ruby>新星<rt>しんせい</rt></ruby>（好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>である）とタモードヴァーラム（マラヤーラム語「<span lang="ml" class="font-malayalam">തമോദ്വാരം</span>」、好んだ代名詞は奴である）と<ruby>佰萬<rt>ひゃくまん</rt></ruby>（好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>である）。現在彼女の<ruby>多元的な存在<rt>プルラリティ</rt></ruby>の原因は、錯誤以外の誰にも知られていない。眼の色を制御する為のコードは、誰が利便性の問題としてフロントしているかを示すのに役立ちます（錯誤はソースコードを自分で書いた）。</p>
           <p>健康上の理由で学校を中退せざるを得なくなる前、錯誤の最高の科目は数学と科学であった。最悪の科目は、様々な肺の問題と喉の問題に起因する言語障害のために、実際には国語であった。それを補う為に、普段はオンラインチャットや手話でコミュニケーションをとっている。錯誤は手話を使うが、聴覚はほとんどのドラゴンよりも鋭いである。皮肉なことに、言語障害にもかかわらず、多くの言語に非常に堪能であるという事である。</p>
           <p>錯誤が抱えている健康上の問題と状態の非網羅的なリスト：<ruby>龍筋肉悪化症<rt>りゅうきんにくあっかしょう</rt></ruby>（筋肉を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と<ruby>龍内臓悪化症<rt>りゅうないぞうあっかしょう</rt></ruby>（内臓を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と自閉症とＡＤＨＤと尿失禁と便失禁（おむつを必要とし、筋肉が悪化する事によって引き起こされる）と腰脊髄麻痺（車椅子を必要とする）と喘息（主に肺内のサイバネティック・インプラントのおかげで対処されている）と深刻なてんかん（脳が人工であるにも関わらず。脳にはセンサーが内蔵されており、発作が起きるたびに看護師に警告を発す）と軽度な光過敏性（太陽の下で外出すると極端な偏頭痛を起こす）とビタミンＤ欠乏症（日光にさらされない為）と完全な免疫不全（いつも寝屋にとどまる理由の一部である）と様々な喉の問題（その結果、恒久的な栄養チューブを持ち、多くの音声障害を発症した）と不安障害など。</p>
+          <!-- 極超新星（Jíchāo Xīnxīng｜極超新星｜极超新星） -->
           <p>——新星について</p>
+          <p>
+            極超　新星（きょくちょう　しんせい）<br>
+            Jichao Xinxing
+          </p>
+          <!-- タモードヴァーラム（Tamodvaram｜തമോദ്വാരം｜Tamōdvāraṁ） -->
           <p>——タモードヴァーラムについて</p>
+          <p>
+            タモードヴァーラム<br>
+            Tamodvaram
+          </p>
+          <!-- 佰萬（Bǎiwàn｜佰萬｜佰万） -->
           <p>——佰萬について</p>
+          <p>
+            佰萬（ひゃくまん）<br>
+            Baiwan
+          </p>
           <br>
           <a href="./gallery/nizi/Cuowu.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
@@ -540,7 +559,7 @@
       <!-- あたしの式神達（My Shikigami） -->
       <article>
         <h2>郷鬼の式神達</h2>
-        <!-- エリサベト・ヒディルベギシュヴィリ＝ガルセヴァニシュヴィリ＝ピルツハライシュヴィリ（Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili） -->
+        <!-- エリサベト・ヒディルベギシュヴィリ＝ガルセヴァニシュヴィリ＝ピルツハライシュヴィリ（Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili｜ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი） -->
         <section>
           <h4 id="Elisabed_Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili">エリサベト・ピルツハライシュヴィリ</h4>
           <div class="pride">
@@ -583,7 +602,7 @@
           <a href="./gallery/nizi/ElisabedPirtskhalaishvili.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- オルハ・ユヒミウナ・リトウィナ＝コスチュチェンコ（Olha Yukhymivna Lytvyna-Kostyuchenko） -->
+        <!-- オルハ・ユヒミウナ・リトウィナ＝コスチュチェンコ（Olha Yukhymivna Lytvyna-Kostyuchenko｜Олга Юхимівна Литвина-Костюченко） -->
         <section>
           <h4 id="Olha_Yukhymivna_Lytvyna-Kostyuchenko">オルハ・ユヒミウナ・リトウィナ</h4>
           <div class="pride">
@@ -623,7 +642,7 @@
           <a href="./gallery/nizi/OlhaYukhymivnaLytvyna.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- 孟聖姫（Maeng Song-Hee） -->
+        <!-- 孟聖姫（Maeng Song-Hee｜맹성희｜孟聖姬） -->
         <section>
           <h4 id="Maeng_Song-Hee">孟聖姫</h4>
           <div class="pride">
@@ -702,7 +721,7 @@
           <a href="./gallery/nizi/KishihimeNuwesaka.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- イリニシュナ・マカロフナ・オブラズツォファ＝スルチェフスカヤ（Ilyinishna Makarovna Obraztsova-Sluchevskaya） -->
+        <!-- イリニシュナ・マカロフナ・オブラズツォファ＝スルチェフスカヤ（Ilyinishna Makarovna Obraztsova-Sluchevskaya｜Ильинишна Макаровна Образцова-Случевская） -->
         <section>
           <h4 id="Ilyinishna_Makarovna_Obraztsova-Sluchevskaya">イリニシュナ・マカロフナ・オブラズツォファ</h4>
           <div class="pride">
@@ -741,7 +760,7 @@
           <a href="./gallery/nizi/IlyinishnaMakarovnaObraztsova.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- サンダ・カイン・テインギ・テ（Sanda Khaing Theingi Htet） -->
+        <!-- サンダ・カイン・テインギ・テ（Sanda Khaing Theingi Htet｜စန္ဒာခိုင်သိင်္ဂီထက်｜Canda Hkuing Singgi Htak） -->
         <section>
           <h4 id="Sanda_Khaing_Theingi_Htet">サンダ・カイン・テインギ・テ</h4>
           <div class="pride">
