Code Cleanup IV (and added character art for Ximena)

--- a/html/astrax.html
+++ b/html/astrax.html
@@ -37,6 +37,7 @@
       </h1>
     </header>
     <main>
+      <h1 id="Astrax_Kingdom">アスドラグ王国</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
