--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -38,7 +38,7 @@
     </header>
     <main>
       <article>
-        <h1 id="bunoden">侮之殿</h1><hr>
+        <h1 id="Palace_of_the_Despised">侮之殿</h1><hr>
         <!-- アルクスニス・アリギルトス（Aļģirts Alksnis） -->
         <section>
           <h4 id="Aļģirts_Alksnis">アルクスニス・アリギルトス</h4>
