--- a/html/credit.html
+++ b/html/credit.html
@@ -37,9 +37,10 @@
       </h1>
     </header>
     <main class="credits">
+      <h1 id="Staff_Credits">スタッフクレジッツ</h1><hr>
       <!-- 原作｜Original Story -->
       <section>
-        <h4>原作</h4>
+        <h4 class="credits-head">原作</h4>
         <p>虹川 郷鬼</p>
       </section>
     </main>
