--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -37,10 +37,10 @@
       </h1>
     </header>
     <main>
-      <h1>日木ヶ原の森</h1><hr>
+      <h1 id="Hikigahara_Forest">日木ヶ原の森</h1><hr>
       <!-- 朴茶々丸（Chachamaru Paku） -->
       <section>
-        <h4>朴茶々丸</h4>
+        <h4 id="Chachamaru_Paku">朴茶々丸</h4>
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
