--- a/html/menu.html
+++ b/html/menu.html
@@ -36,14 +36,14 @@
       <a href="top.html" target="topframe">概要</a><br>
       <a href="maegaki.html" target="topframe">０．前書き</a><br>
       <a href="monster.html" target="topframe">１．妖獣の書</a><br>
-      <a href="boss.html" target="topframe">‎２．ボスの書</a><br>
-      <a href="ushie.html" target="topframe">‎３．宇志江王国</a><br>
-      <a href="kableustein.html" target="topframe">‎４．キャブロイシュタイン王国</a><br>
-      <a href="hikigahara.html" target="topframe">‎５．日木ヶ原の森</a><br>
-      <a href="qarya_al-arnabu.html" target="topframe">‎６．ウサギの里</a><br>
-      <a href="bunoden.html" target="topframe">‎７．侮之殿</a><br>
-      <a href="bingyan.html" target="topframe">‎８．冰岩王國</a><br>
-      <a href="obsidianrat.html" target="topframe">‎９．黒曜石評議会と加入者</a><br>
+      <a href="boss.html" target="topframe">２．ボスの書</a><br>
+      <a href="ushie.html" target="topframe">３．宇志江王国</a><br>
+      <a href="kableustein.html" target="topframe">４．キャブロイシュタイン王国</a><br>
+      <a href="hikigahara.html" target="topframe">５．日木ヶ原の森</a><br>
+      <a href="qarya_al-arnabu.html" target="topframe">６．ウサギの里</a><br>
+      <a href="bunoden.html" target="topframe">７．侮之殿</a><br>
+      <a href="bingyan.html" target="topframe">８．冰岩王國</a><br>
+      <a href="obsidianrat.html" target="topframe">９．黒曜石評議会と加入者</a><br>
       <a href="ibarasaki.html" target="topframe">10．茨崎市</a><br>
       <a href="flame_dragon.html" target="topframe">11．炎龍帝國</a><br>
       <a href="ancient.html" target="topframe">12．旧神關里</a><br>
