--- a/html/nizi.html
+++ b/html/nizi.html
@@ -37,15 +37,13 @@
       </h1>
     </header>
     <main>
-      <h1>虹の造化者</h1><hr>
+      <h1 id="Niji's_Creation">虹の造化者</h1><hr>
       <!-- あたしらのシステム（Our System） -->
       <article>
-        <h2>システム：虹</h2>
+        <h2 id="Our_System">システム：虹</h2>
         <!-- 虹川郷鬼（Satoki Nijikawa） -->
         <section>
-          <div class="heading">
-            <h4 id="Satoki_Nijikawa">虹川郷鬼</h4>
-          </div>
+          <h4 id="Satoki_Nijikawa">虹川郷鬼</h4>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/her</p>
@@ -66,46 +64,42 @@
             <img class="art" src="../img/art/虹川郷鬼.png" alt="郷鬼（PC-98）">
             <p class="caption">PC-98のアート</p>
           </div>
-          <div class="body">
-            <p>奈落から細やかな鬼ちゃん</p>
-            <p>
-              虹川　郷鬼（にじかわ　さとき）<br>
-              Nijikawa Satoki
-            </p>
-            <p>
-              種族：鬼神<br>
-              能力：結晶を創造する程度の能力
-            </p>
-            <p>
-              性別：♀<br>
-              性自認：女・トランスジェンダー　（どうやらノンバイナリー・ガール）<br>
-              代名詞：彼女（she/her）<br>
-              雌雄性：グレイアセクシャルとアロマンティック
-            </p>
-            <p>
-              高さ：１２８．３㎝　←呪いよ :3<br>
-              重さ：３０．４２㎏
-            </p>
-            <p>
-              誕生日：１０月１６日<br>
-              年齢：１０５歳（生活年齢）<br>
-              　　　２５歳（身体と同じ）（※）
-            </p>
-            <p>あたいだね～。 \^w^</p>
-            <p>奈落にある等活地獄の最後の姫である。システムの<ruby>主<rt>ホスト</rt></ruby>であるね。</p>
-            <p>また、神々をむさぼり食う癖がある。（少なくとも食べようとする）</p>
-            <p>体格が小さいため、子供と間違われる事もある。</p>
-            <p>※年齢は、高緊張でスライドする。</p>
-            <br>
-            <a href="./gallery/nizi/SatokiNijikawa.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
-            <br>
-          </div>
+          <p>奈落から細やかな鬼ちゃん</p>
+          <p>
+            虹川　郷鬼（にじかわ　さとき）<br>
+            Nijikawa Satoki
+          </p>
+          <p>
+            種族：鬼神<br>
+            能力：結晶を創造する程度の能力
+          </p>
+          <p>
+            性別：♀<br>
+            性自認：女・トランスジェンダー　（どうやらノンバイナリー・ガール）<br>
+            代名詞：彼女（she/her）<br>
+            雌雄性：グレイアセクシャルとアロマンティック
+          </p>
+          <p>
+            高さ：１２８．３㎝　←呪いよ :3<br>
+            重さ：３０．４２㎏
+          </p>
+          <p>
+            誕生日：１０月１６日<br>
+            年齢：１０５歳（生活年齢）<br>
+            　　　２５歳（身体と同じ）（※）
+          </p>
+          <p>あたいだね～。 \^w^</p>
+          <p>奈落にある等活地獄の最後の姫である。システムの<ruby>主<rt>ホスト</rt></ruby>であるね。</p>
+          <p>また、神々をむさぼり食う癖がある。（少なくとも食べようとする）</p>
+          <p>体格が小さいため、子供と間違われる事もある。</p>
+          <p>※年齢は、高緊張でスライドする。</p>
+          <br>
+          <a href="./gallery/nizi/SatokiNijikawa.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
-        <!-- ワーモ（Wamo） -->
+        <!-- ワーモ（Wamo｜ཝ་མོ་｜wa mo） -->
         <section>
-          <div class="heading">
-            <h4 id="Wamo">ワーモ</h4>
-          </div>
+          <h4 id="Wamo">ワーモ</h4>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/they</p>
@@ -126,44 +120,40 @@
             <img class="art" src="../img/art/ワーモ.png" alt="ワーモ（PC-98）">
             <p class="caption">PC-98のアート</p>
           </div>
-          <div class="body">
-            <p>半種保護者</p>
-            <p>
-              ワーモ<br>
-              Wamo
-            </p>
-            <p><del><ruby>古い名前<rt>デッドネーム</rt></ruby>：ニヒルム　Nihil</del></p>
-            <p>
-              種族：化け狸と狐のハーフ<br>
-              能力：人を獣人に変わる程度の能力
-            </p>
-            <p>
-              性別：インターセックス<br>
-              性自認：ノンバイナリー<br>
-              代名詞：彼女／奴（she/they）<br>
-              雌雄性：エイスフラックス
-            </p>
-            <p>
-              高さ：１５０．５㎝<br>
-              重さ：５０．３０㎏
-            </p>
-            <p>
-              誕生日：９月７日<br>
-              年齢：２７歳
-            </p>
-            <p>噛むと他人を狼獣に変える事ができる<ruby>半狐半狸<rt>ハーフブラッド</rt></ruby>である。名前はチベット語で「キツネ」を意味する。</p>
-            <p>かつては郷鬼に敵対的だったが、その後は落ち着いてきた。ちなみに、通称にある「保護者」は自称であるよ。</p>
-            <p>※チベット文字に「<span lang="bo" class="font-tibetan">ཝ་མོ་</span>」を書く。ワイリー方式に「<span lang="bo-Latn" class="font-latin">wa mo</span>」を書く。</p>
-            <br>
-            <a href="./gallery/nizi/Wamo.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
-            <br>
-          </div>
+          <p>半種保護者</p>
+          <p>
+            ワーモ<br>
+            Wamo
+          </p>
+          <p><ruby>古い名前<rt>デッドネーム</rt></ruby>：<del>ニヒルム　Nihil</del></p>
+          <p>
+            種族：化け狸と狐のハーフ<br>
+            能力：人を獣人に変わる程度の能力
+          </p>
+          <p>
+            性別：インターセックス<br>
+            性自認：ノンバイナリー<br>
+            代名詞：彼女／奴（she/they）<br>
+            雌雄性：エイスフラックス
+          </p>
+          <p>
+            高さ：１５０．５㎝<br>
+            重さ：５０．３０㎏
+          </p>
+          <p>
+            誕生日：９月７日<br>
+            年齢：２７歳
+          </p>
+          <p>噛むと他人を狼獣に変える事ができる<ruby>半狐半狸<rt>ハーフブラッド</rt></ruby>である。名前はチベット語で「キツネ」を意味する。</p>
+          <p>かつては郷鬼に敵対的だったが、その後は落ち着いてきた。ちなみに、通称にある「保護者」は自称であるよ。</p>
+          <p>※チベット文字に「<span lang="bo" class="font-tibetan">ཝ་མོ་</span>」を書く。ワイリー方式に「<span lang="bo-Latn" class="font-latin">wa mo</span>」を書く。</p>
+          <br>
+          <a href="./gallery/nizi/Wamo.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- 清（Kiyoi） -->
         <section>
-          <div class="heading">
-            <h4 id="Kiyoi">清</h4>
-          </div>
+          <h4 id="Kiyoi">清</h4>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/they</p>
@@ -180,45 +170,41 @@
             <img class="art" src="../img/art/清.png" alt="清（PC-98）">
             <p class="caption">PC-98のアート</p>
           </div>
-          <div class="body">
-            <p>情の深い天狗ちゃん</p>
-            <p>
-              清（きよい）<br>
-              Kiyoi
-            </p>
-            <p>
-              性別：♀<br>
-              性自認：ノンバイナリー<br>
-              代名詞：彼女／奴（she/they）<br>
-              雌雄性：アセクシャル
-            </p>
-            <p>
-              種族：天狗<br>
-              能力：不明
-            </p>
-            <p>
-              高さ：１２７．４㎝<br>
-              重さ：？？？㎏
-            </p>
-            <p>
-              誕生日：９月３０日<br>
-              年齢：１５歳
-            </p>
-            <p>とてつもなく優しいノンバイナリーの天狗である。心は残念ながら１２歳のそれに退行しています……。</p>
-            <br>
-            <a href="./gallery/nizi/Kiyoi.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
-            <br>
-          </div>
+          <p>情の深い天狗ちゃん</p>
+          <p>
+            清（きよい）<br>
+            Kiyoi
+          </p>
+          <p>
+            性別：♀<br>
+            性自認：ノンバイナリー<br>
+            代名詞：彼女／奴（she/they）<br>
+            雌雄性：アセクシャル
+          </p>
+          <p>
+            種族：天狗<br>
+            能力：不明
+          </p>
+          <p>
+            高さ：１２７．４㎝<br>
+            重さ：？？？㎏
+          </p>
+          <p>
+            誕生日：９月３０日<br>
+            年齢：１５歳
+          </p>
+          <p>とてつもなく優しいノンバイナリーの天狗である。心は残念ながら１２歳のそれに退行しています……。</p>
+          <br>
+          <a href="./gallery/nizi/Kiyoi.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
       </article>
       <!-- 自己ケモノ（My fursona(s)） -->
       <article>
-        <h2>自己ケモノ</h2>
+        <h2 id="My_fursonas">自己ケモノ</h2>
         <!-- 妖狐（Youko） -->
         <section>
-          <div class="heading">
-            <h4 id="Youko">妖狐</h4>
-          </div>
+          <h4 id="Youko">妖狐</h4>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/they</p>
@@ -239,39 +225,37 @@
             <img class="art" src="../img/fill.png" alt="妖狐">
             <p class="caption">妖狐</p>
           </div>
-          <div class="body">
-            <p>
-              妖狐（ようこ）<br>
-              Youko
-            </p>
-            <p>
-              種族：フェネック<br>
-              能力：不明
-            </p>
-            <p>
-              性別：<br>
-              性自認：ノンバイナリー・トランスフェミニン<br>
-              代名詞：彼女／奴（she/they）<br>
-              雌雄性：アセクシャル
-            </p>
-            <p>
-              誕生日：<br>
-              年齢：
-            </p>
-            <p>自分の服を作るフェネックである。<ruby>郷鬼<rt>あたい</rt></ruby>の自己ケモノであるね。</p>
-            <br>
-            <a href="./gallery/nizi/Youko.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-          </div>
+          <p>
+            妖狐（ようこ）<br>
+            Youko
+          </p>
+          <p>
+            種族：フェネック<br>
+            能力：不明
+          </p>
+          <p>
+            性別：<br>
+            性自認：ノンバイナリー・トランスフェミニン<br>
+            代名詞：彼女／奴（she/they）<br>
+            雌雄性：アセクシャル
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>自分の服を作るフェネックである。<ruby>郷鬼<rt>あたい</rt></ruby>の自己ケモノであるね。</p>
+          <br>
+          <a href="./gallery/nizi/Youko.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
         </section>
       </article>
       <!-- オリキャラ達（OC's） -->
       <article>
-        <h2>虹のオリキャラ</h2>
+        <h2 id="OC's">虹のオリキャラ</h2>
         <!-- アニムス（Animus） -->
         <section>
           <h4 id="Animus">アニムス</h4>
@@ -310,7 +294,7 @@
           <a href="./gallery/nizi/Animus.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- アイン（'Ayn） -->
+        <!-- アイン（'Ayn｜عَيْن｜ʿAyn） -->
         <section>
           <h4 id="ʿAyn">アイン</h4>
           <div class="pride">
@@ -334,7 +318,7 @@
             性別：セックスレス<br>
             性自認：ノンバイナリー<br>
             代名詞：奴／<ruby>奴<rt>イト</rt></ruby>（they/it）<br>
-            雌雄性：
+            雌雄性：不明
           </p>
           <p>
             誕生日：不明<br>
@@ -345,7 +329,7 @@
           <a href="./gallery/nizi/Ayn.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- ボルルマー（Bolormaa） -->
+        <!-- ボルルマー（Bolormaa｜Болормаа｜ᠪᠣᠯᠣᠷᠮᠠ｜｜Bolurma） -->
         <section>
           <h4 id="Bolormaa">ボルルマー</h4>
           <div class="pride">
@@ -427,16 +411,16 @@
           <p>
             ——<ruby>分身<rt>アルター</rt></ruby>の性自認と代名詞と雌雄性——<br>
             錯誤：性自認はジェンダーフリュイドとジェンダーフラックスである。<br>
-            　　　好んだ代名詞は彼女／いずれ（she/any）である。<br>
-            　　　雌雄性は性行為を虫唾が走ったアロ＝エイスである。<br>
+            好んだ代名詞は彼女／いずれ（she/any）である。<br>
+            雌雄性は性行為を虫唾が走ったアロ＝エイスである。<br>
             新星：性自認はノンバイナリー・ガールである。<br>
-            　　　好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>（xe/xer）である。<br>
+            好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>（xe/xer）である。<br>
             タモードヴァーラム：性自認はノンバイナリーである。<br>
-            　　　　　　　　　　好んだ代名詞は奴（they/them）である。<br>
-            　　　　　　　　　　雌雄性はグレイアセクシャルである。<br>
+            好んだ代名詞は奴（they/them）である。<br>
+            雌雄性はグレイアセクシャルである。<br>
             佰萬：性自認はアジェンダーである。<br>
-            　　　好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>（it/its）である。<br>
-            　　　雌雄性はパンロマンティックである。
+            好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>（it/its）である。<br>
+            雌雄性はパンロマンティックである。
           </p>
           <p>
             誕生日：０３２３年６月２９日<br>
@@ -452,24 +436,28 @@
           <p>錯誤の脳は本質的にミニコンピューターである為、これはいくつかのかなり興味深い癖をもたらす。たとえば、錯誤は、ステレオタイプ化やその他の素早い思考を物理的に行う事ができない。彼女の思考は全てゆっくりと論理的であり、コンピューター科学とサイバネティック科学がどのように機能するかについて深い理解につながる。この癖はまた、錯誤を<ruby>現在興味<rt>ハイパーフィクセイション</rt></ruby>に助けます（つまり、実際に彼女の直感の物理的な欠如のために量子力学と天体物理学を非常によく理解しており、彼女が様々な科学を効率的に理解できるようにする）。しかし、錯誤は<ruby>多元的な存在<rt>プルラリティ</rt></ruby>も経験しており、現在４人の<ruby>分身<rt>アルター</rt></ruby>がいる。この<ruby>分身<rt>アルター</rt></ruby>は：<ruby>主人<rt>ホスト</rt></ruby>の錯誤（好んだ代名詞は彼女／いずれかの代名詞である）と<ruby>新星<rt>しんせい</rt></ruby>（好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>である）とタモードヴァーラム（マラヤーラム語「<span lang="ml" class="font-malayalam">തമോദ്വാരം</span>」、好んだ代名詞は奴である）と<ruby>佰萬<rt>ひゃくまん</rt></ruby>（好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>である）。現在彼女の<ruby>多元的な存在<rt>プルラリティ</rt></ruby>の原因は、錯誤以外の誰にも知られていない。眼の色を制御する為のコードは、誰が利便性の問題としてフロントしているかを示すのに役立ちます（錯誤はソースコードを自分で書いた）。</p>
           <p>健康上の理由で学校を中退せざるを得なくなる前、錯誤の最高の科目は数学と科学であった。最悪の科目は、様々な肺の問題と喉の問題に起因する言語障害のために、実際には国語であった。それを補う為に、普段はオンラインチャットや手話でコミュニケーションをとっている。錯誤は手話を使うが、聴覚はほとんどのドラゴンよりも鋭いである。皮肉なことに、言語障害にもかかわらず、多くの言語に非常に堪能であるという事である。</p>
           <p>錯誤が抱えている健康上の問題と状態の非網羅的なリスト：<ruby>龍筋肉悪化症<rt>りゅうきんにくあっかしょう</rt></ruby>（筋肉を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と<ruby>龍内臓悪化症<rt>りゅうないぞうあっかしょう</rt></ruby>（内臓を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と自閉症とＡＤＨＤと尿失禁と便失禁（おむつを必要とし、筋肉が悪化する事によって引き起こされる）と腰脊髄麻痺（車椅子を必要とする）と喘息（主に肺内のサイバネティック・インプラントのおかげで対処されている）と深刻なてんかん（脳が人工であるにも関わらず。脳にはセンサーが内蔵されており、発作が起きるたびに看護師に警告を発す）と軽度な光過敏性（太陽の下で外出すると極端な偏頭痛を起こす）とビタミンＤ欠乏症（日光にさらされない為）と完全な免疫不全（いつも寝屋にとどまる理由の一部である）と様々な喉の問題（その結果、恒久的な栄養チューブを持ち、多くの音声障害を発症した）と不安障害など。</p>
+          <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Cuòwù</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Tsʻo<sup>4</sup>-wu<sup>5</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Tsuoh.wuh</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">錯誤</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">错误</span>」で書く。</p>
           <!-- 極超新星（Jíchāo Xīnxīng｜極超新星｜极超新星） -->
           <p>——新星について</p>
           <p>
             極超　新星（きょくちょう　しんせい）<br>
             Jichao Xinxing
           </p>
+          <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Jíchāo Xīnxīng</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Chi<sup>2</sup>-chʻao<sup>1</sup> Hsin<sup>1</sup>-hsing<sup>1</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Jyichau Shinshing</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">極超新星</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">极超新星</span>」で書く。</p>
           <!-- タモードヴァーラム（Tamodvaram｜തമോദ്വാരം｜Tamōdvāraṁ） -->
           <p>——タモードヴァーラムについて</p>
           <p>
             タモードヴァーラム<br>
             Tamodvaram
           </p>
+          <p>※代名詞は「」である。マラヤーラム文字に「<span lang="ml" class="font-malayalam">തമോദ്വാരം</span>」で書く。</p>
           <!-- 佰萬（Bǎiwàn｜佰萬｜佰万） -->
           <p>——佰萬について</p>
           <p>
             佰萬（ひゃくまん）<br>
             Baiwan
           </p>
+          <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Bǎiwàn</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Pai<sup>3</sup>-wan<sup>4</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Baewann</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">佰萬</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">佰万</span>」で書く。</p>
           <br>
           <a href="./gallery/nizi/Cuowu.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
@@ -558,8 +546,8 @@
       </article>
       <!-- あたしの式神達（My Shikigami） -->
       <article>
-        <h2>郷鬼の式神達</h2>
-        <!-- エリサベト・ヒディルベギシュヴィリ＝ガルセヴァニシュヴィリ＝ピルツハライシュヴィリ（Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili｜ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი） -->
+        <h2 id="My_Shikigami">郷鬼の式神達</h2>
+        <!-- エリサベト・ヒディルベギシュヴィリ＝ガルセヴァニシュヴィリ＝ピルツハライシュヴィリ（Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili｜ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი｜Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili） -->
         <section>
           <h4 id="Elisabed_Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili">エリサベト・ピルツハライシュヴィリ</h4>
           <div class="pride">
@@ -602,7 +590,7 @@
           <a href="./gallery/nizi/ElisabedPirtskhalaishvili.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- オルハ・ユヒミウナ・リトウィナ＝コスチュチェンコ（Olha Yukhymivna Lytvyna-Kostyuchenko｜Олга Юхимівна Литвина-Костюченко） -->
+        <!-- オルハ・ユヒミウナ・リトウィナ＝コスチュチェンコ（Olha Yukhymivna Lytvyna-Kostyuchenko｜Олга Юхимівна Литвина-Костюченко｜Olga Yukhymivna Lytvyna-Kostyuchenko） -->
         <section>
           <h4 id="Olha_Yukhymivna_Lytvyna-Kostyuchenko">オルハ・ユヒミウナ・リトウィナ</h4>
           <div class="pride">
@@ -642,7 +630,7 @@
           <a href="./gallery/nizi/OlhaYukhymivnaLytvyna.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- 孟聖姫（Maeng Song-Hee｜맹성희｜孟聖姬） -->
+        <!-- 孟聖姫（Maeng Song-Hee｜맹성희｜孟聖姬｜Maeng Seonghui） -->
         <section>
           <h4 id="Maeng_Song-Hee">孟聖姫</h4>
           <div class="pride">
@@ -721,7 +709,7 @@
           <a href="./gallery/nizi/KishihimeNuwesaka.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
           <br>
         </section>
-        <!-- イリニシュナ・マカロフナ・オブラズツォファ＝スルチェフスカヤ（Ilyinishna Makarovna Obraztsova-Sluchevskaya｜Ильинишна Макаровна Образцова-Случевская） -->
+        <!-- イリニシュナ・マカロフナ・オブラズツォファ＝スルチェフスカヤ（Ilyinishna Makarovna Obraztsova-Sluchevskaya｜Ильинишна Макаровна Образцова-Случевская｜Il'inishna Makarovna Obraztsova-Sluchevskaya） -->
         <section>
           <h4 id="Ilyinishna_Makarovna_Obraztsova-Sluchevskaya">イリニシュナ・マカロフナ・オブラズツォファ</h4>
           <div class="pride">
