--- a/html/place.html
+++ b/html/place.html
@@ -30,13 +30,14 @@
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
-        <h3 class="header-text">場所</h3>
-      </div>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        場所
+      </h1>
     </header>
     <article>
+      <h1 id="Locations">場所</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
     </article>
     <footer>
