--- a/html/ushie.html
+++ b/html/ushie.html
@@ -112,7 +112,7 @@
           </p>
           <p>家族：</p>
           <p>ライラックの母である。</p>
-          <p>出産の準備をしている最中に昏睡状態に陥ったハイディは、現在（宇志江に）居世神之命王立病院の病床にいる。</p>
+          <p>出産の準備をしている最中に昏睡状態に陥ったハイディは、現在宇志江に居世神之命王立病院の病床にいる。</p>
           <br>
         </section>
         <!-- 恵田満菜魏沙（Nagisa Edamitsu） -->
@@ -323,7 +323,7 @@
           </p>
           <p>
             性別：<br>
-            性自認：<br>
+            性自認：トランスジェンダー<br>
             代名詞：<br>
             雌雄性：
           </p>
@@ -444,10 +444,10 @@
             能力：非常に強力な魔法を使う程度の能力
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：インターセックス<br>
+            性自認：デミ女<br>
+            代名詞：彼女／<ruby>奴<rt>キャット</rt></ruby>（she/cat）<br>
+            雌雄性：レズビアン
           </p>
           <p>
             誕生日：<br>
@@ -496,14 +496,14 @@
             Houraiji Rinne
           </p>
           <p>
-            種族：現時点では不明（おそらく、鬼であるね～）<br>
-            能力：
+            種族：人工的な鬼<br>
+            能力：不明
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：アジェンダー<br>
+            代名詞：奴／<ruby>奴<rt>イト</rt></ruby>（they/it）<br>
+            雌雄性：パンセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -542,10 +542,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：ノンバイナリー<br>
+            代名詞：奴（they/them）<br>
+            雌雄性：アセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -584,10 +584,10 @@
             能力：血液をお酒に変える程度の能力
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♂<br>
+            性自認：ジェンダーフラックス<br>
+            代名詞：彼／奴／<ruby>奴<rt>イト</rt></ruby>（he/they/it）<br>
+            雌雄性：アロマンティック
           </p>
           <p>
             誕生日：<br>
@@ -622,10 +622,10 @@
             能力：血液をお酒に変える程度の能力
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：ノンバイナリー・ガール<br>
+            代名詞：彼女／<ruby>奴<rt>イト</rt></ruby>（she/it）<br>
+            雌雄性：知るには若すぎるよー！！
           </p>
           <p>
             誕生日：<br>
@@ -701,10 +701,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：女・トランスジェンダー<br>
+            代名詞：彼女（she/her）<br>
+            雌雄性：バイセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -739,10 +739,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♂<br>
+            性自認：男<br>
+            代名詞：彼／いずれ（he/any）<br>
+            雌雄性：ゲイ
           </p>
           <p>
             誕生日：<br>
@@ -780,10 +780,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：女・トランスジェンダー<br>
+            代名詞：彼女／<ruby>奴<rt>ディ</rt></ruby>（she/de）<br>
+            雌雄性：アロ＝エイス
           </p>
           <p>
             誕生日：<br>
@@ -863,10 +863,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♂<br>
+            性自認：男・トランスジェンダー<br>
+            代名詞：彼（he/him）<br>
+            雌雄性：ストレート
           </p>
           <p>
             誕生日：<br>
@@ -908,10 +908,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♂<br>
+            性自認：ノンバイナリー・トランスマスキュリン<br>
+            代名詞：彼／<ruby>奴<rt>ジー</rt></ruby>（he/xi）<br>
+            雌雄性：アセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -1080,10 +1080,10 @@
             能力：彼岸に生き物を飄々する程度の能力
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：トライジェンダー<br>
+            代名詞：彼女／彼／奴／<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>ジー</rt></ruby>（she/he/they/it/ze）<br>
+            雌雄性：性行為を虫唾が走ったパンロマンティック
           </p>
           <p>
             誕生日：<br>
@@ -1133,10 +1133,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：ネウトゥワ<br>
+            代名詞：<ruby>奴<rt>エイ</rt></ruby>／<ruby>奴<rt>エム</rt></ruby>／<ruby>奴<rt>エル</rt></ruby>（ey/em/eir）<br>
+            雌雄性：ポリロマンティックとアエゴセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -1177,10 +1177,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♂<br>
+            性自認：男<br>
+            代名詞：彼（he/him）<br>
+            雌雄性：ポリセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -1218,10 +1218,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♂<br>
+            性自認：男・トランスジェンダー<br>
+            代名詞：彼（he/him）<br>
+            雌雄性：バイセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -1332,10 +1332,10 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♂<br>
+            性自認：ノンバイナリー<br>
+            代名詞：奴（they/them）<br>
+            雌雄性：パンセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -2387,7 +2387,8 @@
           </p>
           <p>
             種族：人工的な鬼<br>
-            能力：甘い夢を呼び起こす程度の能力、悪夢を払拭する程度の能力<br>
+            能力：甘い夢を呼び起こす程度の能力<br>
+            　　　悪夢を払拭する程度の能力<br>
             武器：刀”甘夢愛剣”、脇差”悪夢恨剣”
           </p>
           <p>
@@ -2397,10 +2398,22 @@
             雌雄性：レズビアン
           </p>
           <p>
-            誕生日：<br>
-            年齢：
+            誕生日：０３３２年６月１８日（造化した）<br>
+            年齢：１３歳
           </p>
-          <p>家族：</p>
+          <p>
+            家族：笹川あっ子（母親）<br>
+            　　　笹川祐二（父親）<br>
+            　　　西園寺キット（代親）<br>
+            　　　犬上藤（祖母）<br>
+            　　　笹川伊狸沙（祖母）<br>
+            　　　犬上茂和（祖父）<br>
+            　　　犬上波知之（叔父）<br>
+            　　　犬上雲雀代（叔母）<br>
+            　　　犬上かをる（従妹）<br>
+            　　　恵墨・クラーラー・セーデシュトレーム（年下の同性）<br>
+            　　　茨城光秀（年下の同性）
+          </p>
           <p>祐二とあっ子の十二歳の娘で、宇志江の姫である。</p>
           <p>父親が求める多くのことで苦労しているが、彼についてはとても気にしている。</p>
           <p>沖美は、実は祐二と、あっ子と、伊狸沙と血の関係はない。むしろ、あっ子が沖美に家がない事を知った後、祐二は彼女を養子にした。沖美は実際には『光藤』というお名前の未知の科学者によって作成された実験的な人造の鬼である。お名前はもともと片仮名で『オキミ』と書かれていた。</p>
@@ -2562,9 +2575,9 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
+            性別：♀<br>
+            性自認：女<br>
+            代名詞：彼女（she/her）<br>
             雌雄性：
           </p>
           <p>
@@ -2616,14 +2629,14 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：女・トランスジェンダー<br>
+            代名詞：<ruby>奴<rt>イト</rt></ruby>／いずれ（it/any）<br>
+            雌雄性：デミロマンティックとアセクシャル
           </p>
           <p>
-            誕生日：<br>
-            年齢：
+            誕生日：０３２９年８月１０日<br>
+            年齢：１６歳
           </p>
           <p>家族：</p>
           <p>燐音のお友達である。</p>
@@ -2707,16 +2720,19 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：ノンバイナリー・トランスフェミニン<br>
+            代名詞：<ruby>奴<rt>ジー</rt></ruby>／奴（xe/they）<br>
+            雌雄性：アロ＝エイス
           </p>
           <p>
-            誕生日：<br>
-            年齢：
+            誕生日：０３３０年２月２３日<br>
+            年齢：１５歳
           </p>
-          <p>家族：</p>
+          <p>
+            家族：田香羅さつき（母親）<br>
+            　　　田香羅由佳理（妹）
+          </p>
           <p>由佳理の姉である。</p>
           <p>皐戎傘は由佳理より３歳年上である。母親の田香羅さつきが出産で亡くなった為、そんな若い年齢で由佳理の世話をしなければならない。皐戎傘と由佳理は現在、笹川の王家によって保護されている。</p>
           <p>※代名詞は「あたくし」です。</p>
@@ -2761,16 +2777,19 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：インターセックス<br>
+            性自認：女・トランスジェンダー<br>
+            代名詞：彼女（she/her）<br>
+            雌雄性：ロマンスを虫唾が走ったレズビアン
           </p>
           <p>
-            誕生日：<br>
-            年齢：
+            誕生日：０２９６年３月２５日<br>
+            年齢：３８歳（死んだ）
           </p>
-          <p>家族：</p>
+          <p>
+            家族：田香羅皐戎傘（子）<br>
+            　　　田香羅由佳理（娘）
+          </p>
           <p>皐戎傘と由佳理の死んだ母親である。出産中で死んだ。</p>
           <br>
           <br>
@@ -2813,16 +2832,19 @@
             武器：刀”藤切丸”
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：女<br>
+            代名詞：彼女（she/her）<br>
+            雌雄性：知るには若すぎるよー！！
           </p>
           <p>
-            誕生日：<br>
-            年齢：
+            誕生日：０３３４年１月２２日<br>
+            年齢：１１歳
           </p>
-          <p>家族：</p>
+          <p>
+            家族：田香羅さつき（母親）<br>
+            　　　田香羅皐戎傘（年上の同性）
+          </p>
           <p>階級：陸士長</p>
           <p>皐戎傘の妹と宇志江の騎士である。陸士長と強い騎士だよ。</p>
           <p>由佳理の母親は出産中に亡くなり、祐二によってお姉さんと一緒に育てられた。愛情を込めて彼を『ゆー君』と呼んだ。</p>
@@ -2932,14 +2954,14 @@
             武器：野太刀”徳楼剣”
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：♀<br>
+            性自認：女<br>
+            代名詞：彼女（she/her）<br>
+            雌雄性：オムニセクシャル
           </p>
           <p>
-            誕生日：<br>
-            年齢：
+            誕生日：０３３２年９月１日<br>
+            年齢：１３歳
           </p>
           <p>家族：</p>
           <p>城内で祐二によって育った孤児である。</p>
@@ -3131,9 +3153,9 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
+            性別：♀<br>
+            性自認：ノンバイナリー・トランスフェミニン<br>
+            代名詞：彼女／奴／<ruby>奴<rt>フェ</rt></ruby>（she/they/fae）<br>
             雌雄性：
           </p>
           <p>
@@ -5158,7 +5180,7 @@
             <br>
           </div>
           <div class="art-chara">
-            <img class="art" src="../img/fill.png" alt="ヒメナ・リグエレ・イ・オルドニェズ">
+            <img class="art" src="../img/art/ヒメナ・リグエレ・イ・オルドニェズ.png" alt="ヒメナ・リグエレ・イ・オルドニェズ">
             <p class="caption">ヒメナ</p>
           </div>
           <p>厳しいウーパールーパー教師</p>
@@ -5172,9 +5194,9 @@
           </p>
           <p>
             性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性自認：ノンバイナリー・ガール<br>
+            代名詞：彼女／奴／<ruby>奴<rt>ジー</rt></ruby>（she/they/ze）<br>
+            雌雄性：パンセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -5360,8 +5382,8 @@
           </p>
           <p>
             性別：<br>
-            性自認：<br>
-            代名詞：<br>
+            性自認：ノンバイナリー・トランスフェミニン<br>
+            代名詞：<ruby>奴<rt>フェ</rt></ruby>／<ruby>奴<rt>フェル</rt></ruby>（fae/faer）<br>
             雌雄性：
           </p>
           <p>
