--- a/html/akhalipshi.html
+++ b/html/akhalipshi.html
@@ -37,6 +37,7 @@
       </h1>
     </header>
     <main>
+      <h1 id="Akhalipshi_Province">アハリプシ州</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
