--- a/html/armor.html
+++ b/html/armor.html
@@ -18,7 +18,7 @@
       　　　　〓〓〓〓　　　〓
       　〓〓〓〓　　〓　　　〓
       　　　　　　　　〓〓〓〓〓〓〓〓
-	-->
+	  -->
     <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,6 +37,7 @@
       </h1>
     </header>
     <main>
+      <h1 id="Armour">装甲</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
