--- a/html/battle_item.html
+++ b/html/battle_item.html
@@ -37,6 +37,7 @@
       </h1>
     </header>
     <main>
+      <h1 id="Battle_Items">戦闘のアイテム</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
