--- a/html/claeq-swary.html
+++ b/html/claeq-swary.html
@@ -37,6 +37,7 @@
       </h1>
     </header>
     <main>
+      <h1 id="Claeq-Swary_Council_Area">クレーク＝スワリーのカウンシル・エリア</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
