--- a/html/extra_kyara.html
+++ b/html/extra_kyara.html
@@ -37,6 +37,7 @@
       </h1>
     </header>
     <main>
+      <h1 id="Insignificant_Persons">詰らない人々</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
