--- a/html/hourai.html
+++ b/html/hourai.html
@@ -37,6 +37,7 @@
       </h1>
     </header>
     <main>
+      <h1 id="The_Eight_Hermits_of_Hourai">蓬莱山の八仙様達</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
