--- a/html/incidental.html
+++ b/html/incidental.html
@@ -37,6 +37,7 @@
       </h1>
     </header>
     <main>
+      <h1 id="Unimportant_Peoples">さまざまな町人</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
     </main>
     <footer>
