--- a/html/mitutou_note.html
+++ b/html/mitutou_note.html
@@ -30,15 +30,16 @@
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
-        <h3 class="header-text">光藤の手記</h3>
-      </div>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        光藤の手記
+      </h1>
     </header>
-    <article>
+    <main>
+      <h1 id="Mitsuto's_Notes">光藤の手記</h1><hr>
       <p class="coming-soon">乞うご期待！！</p>
-    </article>
+    </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
