Added Pride Reference page

--- a/html/menu.html
+++ b/html/menu.html
@@ -90,6 +90,7 @@
       <a href="extra_kyara.html" target="topframe">53．エキストラ　詰らない人々</a><br>
       <a href="chapter.html" target="topframe">54．エキストラ　章</a><br>
       <a href="credit.html" target="topframe">スタッフ</a><br>
+      <a href="pride.html" target="topframe">プライドの旗</a><br>
     </nav>
   </body>
 </html>
